--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@builder.io/dev-tools": "^1.1.20",
     "@builder.io/react": "^5.0.4",
     "@builder.io/sdk": "^3.0.2",
+    "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
+    "next-svgr": "^0.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-slider": "^2.0.6"
+    "react-slider": "^2.0.6",
+    "react-spring": "^9.7.4",
+    "react-svg": "^16.1.34"
   },
   "devDependencies": {
     "@types/node": "^20",
