--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next-svgr": "^0.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-slider": "^2.0.6",
     "react-spring": "^9.7.4",
     "react-svg": "^16.1.34"
