--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "react-simple-typewriter": "^5.0.1",
     "react-slider": "^2.0.6",
     "react-spring": "^9.7.4",
-    "react-svg": "^16.1.34"
+    "react-svg": "^16.1.34",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slider": "^1.3.6",
+    "@types/react-tooltip": "^4.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
