--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1",
+    "react-player": "^2.16.0",
     "react-simple-typewriter": "^5.0.1",
     "react-slider": "^2.0.6",
     "react-spring": "^9.7.4",
