--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.15",
     "next-svgr": "^0.0.2",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1",
     "react-player": "^2.16.0",
