--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "next-svgr": "^0.0.2",
+    "plyr": "^3.7.8",
+    "plyr-react": "^5.3.0",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1",
+    "react-player": "^2.16.0",
     "react-simple-typewriter": "^5.0.1",
     "react-slider": "^2.0.6",
     "react-spring": "^9.7.4",
